Removed unit from user entity
